[package]
name = "proxy-program"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
io.path = "io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
io.path = "io"

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
io.path = "io"
target-program = {path = "../target-program"}